adding image placeholder

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -238,7 +238,7 @@
   width: 250px;
   margin: 20px;
   padding: 20px;
-  background-color: #120f0f;
+  background-color: #1d1919;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(39, 31, 31, 0.2);
   text-align: center;
